<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screenLabel"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonContainer"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/label_title" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:showDividers="middle"
        android:dividerPadding="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotifyStreamerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_spotifyStreamer" />

        <Button
            android:id="@+id/footbalScoresButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_superDuoApp" />

        <Button
            android:id="@+id/libraryAppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_superDuoLibrary" />

        <Button
            android:id="@+id/buildItBiggerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_buildItBigger" />

        <Button
            android:id="@+id/xyzReaderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_xyzReader" />

        <Button
            android:id="@+id/capstoneAppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_capstone" />

    </LinearLayout>


</RelativeLayout>
